--- a/app/src/main/res/layout-night/activity_recipe.xml
+++ b/app/src/main/res/layout-night/activity_recipe.xml
@@ -90,7 +90,8 @@
                     android:layout_marginTop="20dp"
                     android:text=""
                     android:textColor="?attr/colorControlNormal"
-                    android:textSize="30sp"
+                    android:textSize="25sp"
+                    android:gravity="center_horizontal"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent" />
@@ -111,7 +112,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginStart="10dp"
                     android:layout_marginTop="30dp"
-                    android:layout_marginEnd="30dp"
+                    android:layout_marginEnd="10dp"
                     android:text=""
                     android:textColor="?attr/colorControlNormal"
                     android:textSize="20sp"
