--- a/app/src/main/res/layout/activity_recipe.xml
+++ b/app/src/main/res/layout/activity_recipe.xml
@@ -90,7 +90,8 @@
                     android:layout_marginTop="20dp"
                     android:text=""
                     android:textColor="@color/colorPrimaryText"
-                    android:textSize="30sp"
+                    android:textSize="25sp"
+                    android:gravity="center_horizontal"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent" />
@@ -111,7 +112,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginStart="10dp"
                     android:layout_marginTop="30dp"
-                    android:layout_marginEnd="30dp"
+                    android:layout_marginEnd="10dp"
                     android:text=""
                     android:textColor="@color/colorPrimaryText"
                     android:textSize="20sp"
@@ -130,7 +131,7 @@
                     android:textSize="20sp"
                     android:textStyle="italic"
                     app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintTop_toBottomOf="@+id/tvName" />
+                    app:layout_constraintTop_toBottomOf="@+id/ivAddToFavorites" />
 
                 <TextView
                     android:id="@+id/tvInstructions"
