--- a/app/src/main/res/layout/update_app_dialog.xml
+++ b/app/src/main/res/layout/update_app_dialog.xml
@@ -42,7 +42,7 @@
         app:layout_constraintTop_toBottomOf="@+id/textView8" />
 
     <Button
-        android:id="@+id/btnSubmit"
+        android:id="@+id/btnUpdate"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="30dp"
