--- a/app/src/main/res/layout-night/fragment_add_recipe.xml
+++ b/app/src/main/res/layout-night/fragment_add_recipe.xml
@@ -63,6 +63,20 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
 
+                <androidx.recyclerview.widget.RecyclerView
+                    android:id="@+id/rvImages"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="10dp"
+                    android:layout_marginTop="30dp"
+                    android:layout_marginEnd="10dp"
+                    android:orientation="horizontal"
+                    tools:listitem="@layout/image_row"
+                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@+id/textView4" />
+
                 <com.google.android.material.textfield.TextInputLayout
                     android:id="@+id/etName"
                     android:layout_width="150dp"
@@ -111,12 +125,12 @@
                     android:layout_height="wrap_content"
                     android:layout_marginStart="10dp"
                     android:layout_marginTop="20dp"
-                    android:layout_marginEnd="20dp"
+                    android:layout_marginEnd="10dp"
                     android:hint="@string/ingredients"
                     app:endIconMode="clear_text"
                     app:endIconTint="@color/colorPrimary"
                     app:errorEnabled="true"
-                    app:layout_constraintEnd_toStartOf="@+id/ivAddImage"
+                    app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/etName">
 
@@ -132,7 +146,7 @@
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="10dp"
-                    android:layout_marginTop="40dp"
+                    android:layout_marginTop="20dp"
                     android:layout_marginEnd="10dp"
                     android:hint="@string/instructions"
                     app:endIconMode="clear_text"
@@ -148,16 +162,6 @@
                         android:inputType="textMultiLine" />
 
                 </com.google.android.material.textfield.TextInputLayout>
-
-                <ImageView
-                    android:id="@+id/ivAddImage"
-                    android:layout_width="100dp"
-                    android:layout_height="100dp"
-                    android:layout_marginTop="20dp"
-                    android:layout_marginEnd="10dp"
-                    android:src="@drawable/ic_add_photo"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintTop_toBottomOf="@+id/etTime" />
 
                 <TextView
                     android:id="@+id/textView4"
@@ -185,27 +189,27 @@
                     android:id="@+id/tvCancel"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="10dp"
+                    android:layout_marginTop="20dp"
                     android:layout_marginEnd="20dp"
                     android:layout_marginBottom="150dp"
                     android:text="@string/cancel"
                     android:textSize="18sp"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toStartOf="@+id/tvAdd"
-                    app:layout_constraintTop_toBottomOf="@+id/show" />
+                    app:layout_constraintTop_toBottomOf="@+id/rvImages" />
 
                 <TextView
                     android:id="@+id/tvAdd"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="10dp"
+                    android:layout_marginTop="20dp"
                     android:layout_marginEnd="20dp"
                     android:layout_marginBottom="150dp"
                     android:text="@string/add"
                     android:textSize="18sp"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintTop_toBottomOf="@+id/show" />
+                    app:layout_constraintTop_toBottomOf="@+id/rvImages" />
 
             </androidx.constraintlayout.widget.ConstraintLayout>
 
