--- a/app/src/main/res/layout-night/image_row.xml
+++ b/app/src/main/res/layout-night/image_row.xml
@@ -15,7 +15,8 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="200dp"
-    android:layout_height="200dp">
+    android:layout_height="200dp"
+    android:padding="10dp">
 
     <ImageView
         android:id="@+id/image"
