--- a/app/src/main/res/layout-night/activity_recipe.xml
+++ b/app/src/main/res/layout-night/activity_recipe.xml
@@ -37,16 +37,15 @@
             app:statusBarScrim="@color/colorPrimary"
             app:title="@string/app_name">
 
-            <ImageView
-                android:id="@+id/ivHeader"
+            <androidx.viewpager.widget.ViewPager
+                android:id="@+id/vpImages"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:fitsSystemWindows="true"
                 android:scaleType="centerCrop"
                 android:transitionName="photo"
                 app:layout_collapseMode="parallax"
-                app:layout_collapseParallaxMultiplier="0.5"
-                tools:src="@tools:sample/backgrounds/scenic" />
+                app:layout_collapseParallaxMultiplier="0.5"/>
 
             <androidx.appcompat.widget.Toolbar
                 android:id="@+id/toolbar"
