--- a/app/src/main/res/layout/activity_recipe.xml
+++ b/app/src/main/res/layout/activity_recipe.xml
@@ -37,7 +37,7 @@
             app:statusBarScrim="@color/colorPrimary"
             app:title="@string/app_name">
 
-            <androidx.viewpager.widget.ViewPager
+            <androidx.viewpager2.widget.ViewPager2
                 android:id="@+id/vpImages"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
