--- a/app/src/main/res/layout-night/recipe_image_view_pager_item.xml
+++ b/app/src/main/res/layout-night/recipe_image_view_pager_item.xml
@@ -18,8 +18,8 @@
 
     <ImageView
         android:id="@+id/imageViewPager"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_width="400dp"
+        android:layout_height="400dp"
         android:src="@drawable/ic_add_photo"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
