--- a/app/src/main/res/layout-night/activity_recipe.xml
+++ b/app/src/main/res/layout-night/activity_recipe.xml
@@ -178,6 +178,7 @@
                     android:text="Name"
                     android:textColor="?attr/colorControlNormal"
                     android:textSize="25sp"
+                    android:inputType="text"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent" />
@@ -193,6 +194,7 @@
                     android:text="Ingredients"
                     android:textColor="?attr/colorControlNormal"
                     android:textSize="20sp"
+                    android:inputType="text"
                     app:layout_constraintEnd_toStartOf="@+id/etTime"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/etName" />
@@ -208,6 +210,7 @@
                     android:textColor="?attr/colorControlNormal"
                     android:textSize="20sp"
                     android:textStyle="italic"
+                    android:inputType="number"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintTop_toTopOf="parent" />
 
@@ -222,12 +225,35 @@
                     android:text="Instructions"
                     android:textColor="?attr/colorControlNormal"
                     android:textSize="20sp"
+                    android:inputType="text"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/etIngredients" />
 
+                <TextView
+                    android:id="@+id/textView4"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="30dp"
+                    android:text="@string/show_to_everyone"
+                    android:textSize="18sp"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintHorizontal_bias="0.2"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@+id/etInstructions" />
+
+                <com.google.android.material.radiobutton.MaterialRadioButton
+                    android:id="@+id/show"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="10dp"
+                    android:layout_marginTop="20dp"
+                    android:checked="true"
+                    app:layout_constraintStart_toEndOf="@+id/textView4"
+                    app:layout_constraintTop_toBottomOf="@+id/etInstructions" />
+
                 <Button
-                    android:id="@+id/btnCancel"
+                    android:id="@+id/btnEdit"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="20dp"
@@ -237,11 +263,11 @@
                     android:textColor="?attr/colorControlNormal"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintTop_toBottomOf="@+id/etInstructions"
+                    app:layout_constraintTop_toBottomOf="@+id/show"
                     app:layout_constraintVertical_bias="1.0" />
 
                 <Button
-                    android:id="@+id/btnEdit"
+                    android:id="@+id/btnCancel"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="20dp"
@@ -250,8 +276,8 @@
                     android:text="@string/cancel"
                     android:textColor="?attr/colorControlNormal"
                     app:layout_constraintBottom_toBottomOf="parent"
-                    app:layout_constraintEnd_toStartOf="@+id/btnCancel"
-                    app:layout_constraintTop_toBottomOf="@+id/etInstructions" />
+                    app:layout_constraintEnd_toStartOf="@+id/btnEdit"
+                    app:layout_constraintTop_toBottomOf="@+id/show" />
 
             </androidx.constraintlayout.widget.ConstraintLayout>
 
