--- a/app/src/main/res/layout/activity_recipe.xml
+++ b/app/src/main/res/layout/activity_recipe.xml
@@ -177,6 +177,7 @@
                     android:text="Name"
                     android:textColor="@color/colorPrimaryText"
                     android:textSize="25sp"
+                    android:inputType="text"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent" />
@@ -191,6 +192,7 @@
                     android:text="Ingredients"
                     android:textColor="@color/colorPrimaryText"
                     android:textSize="20sp"
+                    android:inputType="text"
                     app:layout_constraintEnd_toStartOf="@+id/etTime"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/etName" />
@@ -205,6 +207,7 @@
                     android:textColor="@color/colorPrimaryText"
                     android:textSize="20sp"
                     android:textStyle="italic"
+                    android:inputType="number"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintTop_toTopOf="parent" />
 
@@ -218,12 +221,35 @@
                     android:text="Instructions"
                     android:textColor="@color/colorPrimaryText"
                     android:textSize="20sp"
+                    android:inputType="text"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/etIngredients" />
 
+                <TextView
+                    android:id="@+id/textView4"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="30dp"
+                    android:text="@string/show_to_everyone"
+                    android:textSize="18sp"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintHorizontal_bias="0.2"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@+id/etInstructions" />
+
+                <com.google.android.material.radiobutton.MaterialRadioButton
+                    android:id="@+id/show"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="10dp"
+                    android:layout_marginTop="20dp"
+                    android:checked="true"
+                    app:layout_constraintStart_toEndOf="@+id/textView4"
+                    app:layout_constraintTop_toBottomOf="@+id/etInstructions" />
+
                 <Button
-                    android:id="@+id/btnCancel"
+                    android:id="@+id/btnEdit"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="20dp"
@@ -233,11 +259,11 @@
                     android:textColor="@color/colorPrimaryText"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintTop_toBottomOf="@+id/etInstructions"
+                    app:layout_constraintTop_toBottomOf="@+id/show"
                     app:layout_constraintVertical_bias="1.0" />
 
                 <Button
-                    android:id="@+id/btnEdit"
+                    android:id="@+id/btnCancel"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="20dp"
@@ -246,8 +272,8 @@
                     android:text="@string/cancel"
                     android:textColor="@color/colorPrimaryText"
                     app:layout_constraintBottom_toBottomOf="parent"
-                    app:layout_constraintEnd_toStartOf="@+id/btnCancel"
-                    app:layout_constraintTop_toBottomOf="@+id/etInstructions" />
+                    app:layout_constraintEnd_toStartOf="@+id/btnEdit"
+                    app:layout_constraintTop_toBottomOf="@+id/show" />
 
             </androidx.constraintlayout.widget.ConstraintLayout>
 
